# iceccs-2018

./: .gitignore  LICENSE  README.md
data/evaluation_results/: events_100_nodes.csv  events_10_nodes.csv  events_150_nodes.csv  events_200_nodes.csv  events_20_nodes.csv  events_50_nodes.csv  events_70_nodes.csv
data/input_dataset/: ENO_Box_3B06.csv
model/: model.ml
server/: README.md  big4wsn.opam  big4wsn_client.ml  big4wsn_server.ml  events.ml  jbuild  misc.ml  model.big
server/tests/: fail_leave.nc  test_fail_leave.sh
